# Magic

./: README.md  dockerfile  pyproject.toml
.github/workflows/: python-app.yml
magic/: main.py
magic/model_client/: client.py  config.py
tests/: test_dummy_bot.py
