[tool.poetry]
name = "magic"
version = "0.1.0"
description = ""
authors = ["HanBinGer <Elafom3@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"